# searchscinece

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
.github/workflows/: daily-digest.yml  test.yml
agents/: openai.yaml
config/: default_profile.yaml
profiles/: example.yaml
scripts/: cli.py  download_pdfs.py  fetch_papers.py  find_github.py  generate_report.py  setup_wizard.py  v3_builders.py
src/sources/: __init__.py  cnki.py  orchestrator.py  pubmed.py
src/utils/: __init__.py  config.py  progress.py  robustness.py
tests/: test_core.py
