[build-system]
requires = ['setuptools>=61.0', 'wheel']
build-backend = 'setuptools.backends._legacy:_Backend'

[project]
name = 'searchscinece'
version = '5.0.0'
description = 'AI-Powered Multi-Source Academic Paper Deep Analysis System | Codex Skill'
readme = 'README.md'
license = {text = 'MIT'}
requires-python = '>=3.9'
authors = [
    {name = 'Q-clou'}
]
keywords = [
    'academic', 'papers', 'research', 'arxiv', 'cnki',
    'literature-review', 'deep-learning', 'remote-sensing', 'codex-skill'
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Information Analysis',
]
dependencies = [
    'reportlab>=4.0',
    'pyyaml>=6.0',
]

[project.optional-dependencies]
dev = [
    'pytest>=7.0',
]

[project.urls]
Homepage = 'https://github.com/Q-clou/searchscinece'
Issues = 'https://github.com/Q-clou/searchscinece/issues'

[tool.pytest.ini_options]
testpaths = ['tests']
pythonpath = ['.']
